chore: Setup postgres, prisma ORM, and create a simple table to store posts.

--- a/.env.default
+++ b/.env.default
@@ -3,3 +3,6 @@ LLM_MODEL_NAME="mistral"
 
 # Required
 OLLAMA_API_URL="http://localhost:11434/api/generate"
+
+# Required
+DATABASE_URL="postgresql://spamdetector:spamdetector@localhost:5432/spamdetector"
