--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "prepare": "husky",
     "lint": "eslint . --ext .ts",
-    "start:dev": "ts-node --project tsconfig.json -r tsconfig-paths/register src/main.ts"
+    "build": "tsc && tsc-alias",
+    "start": "node dist/main.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
@@ -40,6 +42,7 @@
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
   }
