chore: Move away from scheduling and onto queuing; plug in necessary modules. Update environment variables.

--- a/.env.default
+++ b/.env.default
@@ -2,10 +2,13 @@
 PORT="3000"
 
 # Required
+QUEUE_NAME="moderation"
+
+# Required
 LLM_MODEL_NAME="mistral"
 
 # Required
-REDIS_URL=:"redis://localhost:6379"
+REDIS_URL="redis://localhost:6379"
 
 # Required
 OLLAMA_API_URL="http://localhost:11434/api/generate"
