--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc && tsc-alias",
     "start": "node dist/main.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
+    "migrate": "prisma migrate dev",
+    "start:dev": "npm run migrate && ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
     "@nestjs/bullmq": "^11.0.3",
