chore: Move moderation queue options into default initilization and avoid using the config in logic. Some sensible renames.

--- a/.env.default
+++ b/.env.default
@@ -2,13 +2,13 @@
 PORT="3000"
 
 # Required
-QUEUE_NAME="moderation"
-
-# Required
 LLM_MODEL_NAME="mistral"
 
 # Required
 REDIS_URL="redis://localhost:6379"
+
+# Required
+MODERATION_QUEUE_NAME="moderation"
 
 # Required
 OLLAMA_API_URL="http://localhost:11434/api/generate"
