Feature/Implement Moderation Inference (#4)
* chore: Add a simple type for moderation verdict.

* chore: Add a first prompt iteration.

* chore: Add a second prompt iteration.

* chore: Swap a constant to make API more flexible to change.

* chore: Add redis container for running queue on top.

* chore: Update .env file.

* chore: Install necessary dependencies (bullmq, redis client).

* bugfix: Patch environment variable name in Ollama image startup shell script.

* chore: Move away from scheduling and onto queuing; plug in necessary modules. Update environment variables.

* chore: Cosmetics.

* chore: Cosmetics.

* feature: Enqueue an action to moderate post upon post creation in the database.

* chore: Run database migrations on every dev server boot.

* chore: Move moderation queue options into default initilization and avoid using the config in logic. Some sensible renames.

* chore: And more sensible renames.

* feature: Plug in moderation processor.

* chore: Move queue name away from environment variables and into constants.

* bugfix: Patching some Nest.JS's DI quirks; adding queueing end to end.

* chore: Adding database module to later be consumed by moderation service.

* chore: DI the logger.

* chore: Moving things around; start tackling moderation service.

* feature: Dishing out moderation service.

* chore: Removing unnecessary DI.

* chore: Some better method naming.

* chore: Plug in.

* chore: Sprinkling logs here and there.

* feature: introduce moderation end-to-end.

--- a/.env.default
+++ b/.env.default
@@ -5,6 +5,9 @@ PORT="3000"
 LLM_MODEL_NAME="mistral"
 
 # Required
+REDIS_URL="redis://localhost:6379"
+
+# Required
 OLLAMA_API_URL="http://localhost:11434/api/generate"
 
 # Required
