--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "lint": "eslint . --ext .ts --fix",
     "build": "tsc && tsc-alias",
     "start": "node dist/main.js",
-    "start:dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
+    "migrate": "prisma migrate dev",
+    "start:dev": "npm run migrate && ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
@@ -25,9 +27,11 @@
     "@nestjs/schedule": "^6.0.0",
     "@prisma/client": "^6.13.0",
     "axios": "^1.11.0",
+    "bullmq": "^5.56.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
+    "ioredis": "^5.7.0",
     "prisma": "^6.13.0",
     "reflect-metadata": "^0.2.2"
   },
