chore: Introduce dev Dockerfile and bake in API into docker compose for the ease of development.

--- a/.env.default
+++ b/.env.default
@@ -5,10 +5,10 @@ PORT="3000"
 LLM_MODEL_NAME="mistral"
 
 # Required
-REDIS_URL="redis://localhost:6379"
+REDIS_URL="redis://redis:6379"
 
 # Required
-OLLAMA_API_URL="http://localhost:11434/api/generate"
+OLLAMA_API_URL="http://ollama:11434/api/generate"
 
 # Required
-DATABASE_URL="postgresql://spamdetector:spamdetector@localhost:5432/spamdetector"
+DATABASE_URL="postgresql://spamdetector:spamdetector@postgres:5432/spamdetector"
