--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -28,4 +28,4 @@ ENV NODE_ENV=development \
 
 EXPOSE 3000 9229
 
-CMD ["npm", "run", "start:dev"]
+CMD ["sh","-c","npx prisma generate && npx prisma migrate deploy && npm run start:dev"]
