--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc && tsc-alias",
     "start": "node dist/main.js",
     "migrate": "prisma migrate dev",
-    "start:dev": "npm run migrate && ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
+    "start:dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts"
   },
   "dependencies": {
     "@nestjs/bullmq": "^11.0.3",
